--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <meta property="og:title" content="Matrix Snake">
   <meta property="og:description" content="Snake game in Javascript Matrices">
   <title>Matrix Snake</title>
+  <style>
+    pre {
+      font-size: 17px;
+    }
+  </style>
 </head>
 <body>
   <div id="game"></div>
